<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.fhooe.mc.android.cakespromoteobesity.main.MainActivity">

    <Button
        android:text="@string/btn_main_text_joinLobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_joinLobby"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="18sp"
        android:background="@drawable/border"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_customize"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_joinLobby"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:text="@string/btn_main_customize"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_playerName"
        android:hint="Enter Player Name"
        android:gravity="center_horizontal"
        android:textSize="18sp"

        android:layout_below="@+id/btn_customize"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <Button
        android:text="@string/btn_main_text_createLobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:id="@+id/btn_createLobby"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="18sp"
        android:layout_marginBottom="22dp"
        android:layout_above="@+id/btn_joinLobby"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
