<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.fhooe.mc.android.cakespromoteobesity.customize.CustomizeDeck">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_custom_name"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_custom_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_custom_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/linearLayout"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_custom_id"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_custom_id"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_custom_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/linearLayout"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_above="@+id/btn_custom_saveDeck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_custom_prompts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_custom_prompts"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="9dp"
                android:layout_alignBaseline="@+id/btn_custom_savePrompt"
                android:layout_alignBottom="@+id/btn_custom_savePrompt"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/et_custom_prompt"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/tv_custom_prompts"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="82dp" />

            <Button
                android:id="@+id/btn_custom_savePrompt"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:elevation="1dp"
                android:text="+"
                app:layout_constraintBottom_toBottomOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="314dp"
                android:layout_above="@+id/listView_custom_prompts" />

            <ListView
                android:id="@+id/listView_custom_prompts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:layout_below="@+id/et_custom_prompt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_custom_responses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_custom_responses"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="13dp" />

            <EditText
                android:id="@+id/et_custom_response"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/tv_custom_responses"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/tv_custom_responses"
                app:layout_constraintRight_toLeftOf="@+id/btn_custom_savePrompt"
                tools:layout_editor_absoluteY="1dp" />

            <Button
                android:id="@+id/btn_custom_saveResponse"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/editText2"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:elevation="1dp"
                android:text="+"
                app:layout_constraintBottom_toBottomOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="313dp" />

            <ListView
                android:id="@+id/listView_custom_responses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/et_custom_response"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_custom_saveDeck"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border"
        android:padding="5dp"
        android:text="@string/btn_custom_save"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

</android.widget.RelativeLayout>
